# online_store

./: .env.sample  .gitignore  README.md  pyproject.toml
blog/: admin.py  models.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  validators.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_contact_alter_category_options_alter_product_options.py  0003_version.py  0004_product_owner.py  0005_alter_product_options_product_is_published.py
catalog/templates/catalog/: base.html  category_list.html  contacts.html  create_product.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_product.html
catalog/templatetags/: my_tags.py
config/: settings.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_verification_code_user_verified.py  0002_user_verify_code.py
users/templates/users/: login.html  register.html  user_form.html  verification.html
users/views/: cbv.py  fbv.py
