[tool.poetry]
name = "online-store"
version = "0.1.0"
description = ""
authors = ["Pavel Akulich <pavelakulich1999@gmail.com>"]
readme = "README.md"
packages = [{include = "online_store"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
ipython = "^8.16.1"
pillow = "^10.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
